# MinVR

config/: desktop-headtracked-freeglut.minvr  desktop-headtracked.minvr
src/: CMakeLists.txt
src/config/: VRDataIndex.cpp  VRDataIndex.h
src/display/: VRProjectionNode.cpp
src/input/: VRFakeTrackerDeviceRelative.cpp  VRFakeTrackerDeviceRelative.h
src/main/: VRMain.cpp
tests-batch/: CMakeLists.txt
tests-batch/display/: CMakeLists.txt  projectiontest.cpp
tests-batch/input/: CMakeLists.txt  faketrackertest.cpp
